[gd_scene load_steps=9 format=3 uid="uid://bytkm0r5fe5xb"]

[ext_resource type="Script" uid="uid://dedhjloxblho6" path="res://scenes/game_elements/characters/npcs/elder/components/elder.gd" id="1_jlpjw"]
[ext_resource type="Resource" uid="uid://ykdgo73x62wa" path="res://scenes/game_elements/characters/npcs/elder/components/story_quest_starter.dialogue" id="2_kqtes"]
[ext_resource type="SpriteFrames" uid="uid://bpfnbr7ig4s5g" path="res://scenes/game_elements/characters/shared_components/sprite_frames/elder.tres" id="3_ak236"]
[ext_resource type="Script" uid="uid://du8wfijr35r35" path="res://scenes/game_elements/props/interact_area/components/interact_area.gd" id="4_81yrg"]
[ext_resource type="Script" uid="uid://edcifob4jc4s" path="res://scenes/game_logic/talk_behavior.gd" id="5_ak236"]
[ext_resource type="AudioStream" uid="uid://dxbxx6x5h7d8p" path="res://assets/third_party/sounds/characters/npcs/elder/BookPage.ogg" id="5_kqtes"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3vyb7"]
radius = 12.0
height = 74.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eksq"]
size = Vector2(67, 72)

[node name="Elder" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_jlpjw")
dialogue = ExtResource("2_kqtes")
look_at_side = 0
sprite_frames = ExtResource("3_ak236")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -40)
sprite_frames = ExtResource("3_ak236")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.757037

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_3vyb7")

[node name="InteractArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 32
collision_mask = 0
script = ExtResource("4_81yrg")
metadata/_custom_type_script = "uid://du8wfijr35r35"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
position = Vector2(7.5, -40)
shape = SubResource("RectangleShape2D_3eksq")
debug_color = Color(0.600391, 0.54335, 0, 0.42)

[node name="TalkBehavior" type="Node" parent="." node_paths=PackedStringArray("interact_area")]
unique_name_in_owner = true
script = ExtResource("5_ak236")
dialogue = ExtResource("2_kqtes")
interact_area = NodePath("../InteractArea")
metadata/_custom_type_script = "uid://edcifob4jc4s"

[node name="Sounds" type="Node2D" parent="."]

[node name="BookSound" type="AudioStreamPlayer2D" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("5_kqtes")
volume_db = -6.0
pitch_scale = 2.0
max_distance = 1500.0
attenuation = 3.0
bus = &"SFX"

[node name="StorybookLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
